@@ -71,7 +71,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
         [/leader]
         side=1
         controller=human
-        recruit="Ghost,Troll Whelp,Assassin,Elvish Hero,Elvish Fighter,Elvish Archer,Horseman,Mage,Elvish Shaman,Red Mage,Spearman,Swordsman,Duelist,Fencer,Elvish Captain,Elvish Ranger,Elvish Shyde,Thief,Rogue,White Mage,Mage of Light,Elvish Sharpshooter,Silver Mage,Vampire Bat,Blood Bat,Dread Bat,Soulless,Walking Corpse"
+        recruit="Ghost,Troll Whelp,Assassin,Elvish Hero,Elvish Fighter,Elvish Archer,Horseman,Mage,Elvish Shaman,Red Mage,Spearman,Swordsman,Duelist,Fencer,Elvish Captain,Elvish Ranger,Elvish Shyde,Thief,Rogue,White Mage,Mage of Light,Elvish Sharpshooter,Silver Mage,Vampire Bat,Blood Bat,Dread Bat,Soulless,Walking Corpse,Fire Dragon"
         gold=2000
 		village_support=5
         team_name="1"
@@ -2750,6 +2750,12 @@ For game purposes, the races group into factions; for example, orcs often cooper
             side=1
             x,y="recall","recall"
             type=Ancient Wose
+        [/unit]
+
+        [unit]
+            side=1
+            x,y="recall","recall"
+            type=Fire Dragon
         [/unit]
 
         [lua]
