@@ -56,6 +56,8 @@ Version 1.11.1+svn:
    * Allow copying the selection in the old (default) lobby using
      Ctrl+C/Command+C (bug #5877)
    * Color coded the resistance table in the hp display's tooltip.
+   * Scale down unit baseframes larger than 72x72 in the Recruit and Recall
+     dialogs to prevent all list entries from being enlarged to fit
    * Tooltip for the movement points display shows the movement costs.
    * Updating the shroud after delaying shroud updates is done gradually instead
      of instantly.
